# microservices

./: LICENSE
services/auth-service/: Makefile  pyproject.toml
services/auth-service/src/auth_service/core/domain/commands/: __init__.py  user.py
services/auth-service/src/auth_service/core/domain/errors/: __init__.py  base_error.py  core_exception.py
services/auth-service/src/auth_service/core/domain/models/: __init__.py  base_model.py  contact.py  user.py
services/auth-service/src/auth_service/core/domain/utils/: __init__.py  enums.py  fields.py
services/auth-service/src/auth_service/core/ports/: __init__.py
services/auth-service/src/auth_service/core/ports/contact/: __init__.py
services/auth-service/src/auth_service/core/ports/user/: __init__.py
services/auth-service/src/auth_service/driver_adapters/api/: main.py
services/auth-service/tests/auth_service/core/domain/models/: __init__.py  test_base_model.py  test_user.py
services/auth-service/tests/auth_service/core/domain/utils/: __init__.py
