[project]
name = "auth-service"
version = "0.1.0"
description = "Microservice for authentication"
authors = [{ name = "Ahonakpon Guy Gbaguidi", email = "ag.gbaguidi@sustainable.bj" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API framework and server
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    
    # Authentication and security
    "python-jose[cryptography]",  # JWT token handling
    "passlib[bcrypt]",            # Password hashing
    
    # Data validation and serialization
    "pydantic[email]>=2.0.0",     # Data validation with email support
    
    # Database and ORM
    "sqlalchemy>=2.0.0",          # ORM for database operations
    "alembic>=1.10.0",            # Database migrations
    "asyncpg>=0.27.0",            # PostgreSQL async driver
    
    # CLI functionality
    "typer>=0.9.0",               # CLI tool building
    
    # Caching and session management
    "redis>=4.5.0",               # For token storage/session management
    
    # Messaging and events
    "pika>=1.3.0",                # RabbitMQ client for messaging
    
    # Utilities
    "tenacity>=8.2.0",            # For retry logic
    "emails>=0.6",                # For sending emails
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",              # for API tests
    "coverage>=7.2.0",
    
    # Development tools
    "python-dotenv>=1.0.0",       # Environment variables for development
    "ruff>=0.0.260",              # linter
    "mypy>=1.2.0",                # static type checker
    "black>=23.3.0",              # formatter
    "isort>=5.12.0",              # import sorter
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-s -vv --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"